--- a/mines/style.css
+++ b/mines/style.css
@@ -3,9 +3,13 @@
   margin: 0;
   box-sizing: border-box;
 }
-.whole{
+body{
   background-color: #1D1D1D;
+  /* padding: 1rem; */
 }
+/* .unique{
+  padding: 10px;
+} */
 .first-indctory {
   display: flex;
   justify-content: space-between;
@@ -350,4 +354,185 @@ font-weight: bold;
 }
 .real-about i {
   color: #ff4500;
+}
+
+.second-card-container{
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  padding: 1.5rem;
+}
+.second-card{
+  background-color: black;
+  color: white;
+  border-radius: 8px;
+  padding: 2.7rem;
+  text-align: center;
+  font-size: 1.4rem;
+  box-shadow: 0 4px 10px rgba(255, 255, 255, 2.9);
+}
+.second-card h1{
+  font-family: "Poppins", sans-serif;
+}
+.our-services-container{
+  display: flex;
+  justify-content: center;
+  color: white;
+  padding: 1.3rem;
+  text-align: center;
+  gap: 1rem;
+  position: relative;
+}
+.vaf{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.contain{
+  color: white;
+  margin-top: 1rem;
+  text-align: center;
+  background-color: #252525;
+  padding: 1rem;
+}
+
+.third-text-container{
+  position: absolute;
+  left: 0;
+  /* top: -1%; */
+  right: 0;
+  /* font-size: 1.6rem; */
+  z-index: -1;
+  /* bottom: 0.3rem; */
+}
+.contact-us-container{
+  display: flex;
+  align-items: center;
+  /* justify-content: center; */
+  padding: 2.5rem;
+  gap: 1rem;
+  position: relative;
+  color: white;
+}
+.contact-us-container::before{
+  content: "";
+  position: absolute;
+  background-image: url(/assets/img/contact-bg.jpg);
+  background-size: cover;
+  background-color: #ff4500;
+  z-index: -1;
+  opacity: 0.5;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  background-position: center;
+}
+.contact-us-container::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /* background-color: rgba(255, 69, 0, 0.7); */
+  background-color: #5B6F79;
+  z-index: -2;
+}
+.contact-info{
+  display: flex;
+  gap: 1rem;
+}
+.social-icons{
+  display: flex;
+  gap: 0.3rem;
+}
+/* input{
+  background-color: black;
+  color: white;
+  padding: 10px;
+  border-radius: 4px;
+  border: none;
+} */
+.form-container{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 1rem;
+  width: 100%;
+  justify-content: center;
+}
+.form-container div{
+  display: flex;
+  align-items: center;
+  /* background-color: #2c3e50; */
+  /* padding: 0.5rem; */
+  /* border-radius: 8px; */
+  /* padding: 0.5rem; */
+  /* height: 50px; */
+}
+.input-side-1{
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+.input-side-2{
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+.input-side-3{
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+.input-side-4{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.input-side-5{
+  display: flex;
+  /* align-items: center; */
+  justify-content: center;
+}
+.form-container .iconic{
+  padding: 10px;
+  background-color:#6795ac ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  border-radius: 8px 0 0 8px;
+}
+/* textarea{
+  padding: 2rem 1.3rem;
+  width: 100%;
+} */
+.form-container input, 
+.form-container textarea {
+  background-color:black;
+  color: white;
+  border: none;
+  padding: 10px;
+  width: 100%;
+  font-size: 1rem;
+  border-radius: 0 8px 8px 0;
+  box-sizing: border-box;
+}
+textarea{
+  padding: 1rem;
+  min-height: 100px;
+  resize: none;
+  max-width: 380px;
+}
+.form-container input{
+  height: 50px;
+}
+input[type="date"]{
+  height: 50px;
+  width: 200%;
+}
+.flex{
+  font-size: 1.9rem;
+  font-family: "Poppins", sans-serif;
 }
